@@ -1,5 +1,5 @@
 ############################################################
-# Step 1: Build-Phase (with Maven und OpenJDK)
+# Step 1: Build-Phase (with Maven and OpenJDK)
 ############################################################
 
 FROM ubuntu:20.04 AS build
@@ -7,12 +7,13 @@ FROM ubuntu:20.04 AS build
 # Set non-interactive frontend for apt-get to avoid regional settings prompt
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install dependencies: curl, maven, openjdk-21, git and others
+# Install dependencies: curl, maven, openjdk-21, git, binutils, and others
 RUN apt-get update && apt-get install -y \
     curl \
     maven \
     openjdk-21-jdk-headless \
     git \
+    binutils \
     && apt-get clean
 
 # Set working directory
@@ -30,25 +31,36 @@ COPY src ./src
 # Build the Spring Boot application
 RUN mvn clean install
 
+# Use jdeps to determine required Java modules
+RUN jdeps --print-module-deps --ignore-missing-deps target/*.jar > jre-deps.info
+
+# Generate a custom runtime image using jlink
+RUN jlink \
+    --module-path /usr/lib/jvm/java-21-openjdk-amd64/jmods \
+    --add-modules $(cat jre-deps.info) \
+    --output /custom-jre \
+    --strip-debug \
+    --no-man-pages \
+    --no-header-files \
+    --compress=2
+
 ############################################################
-# Step 2: Runtime-Phase (with OpenJDK)
+# Step 2: Runtime-Phase (with Distroless)
 ############################################################
 
-FROM ubuntu:20.04 AS runtime
+FROM gcr.io/distroless/java17-debian11 AS runtime
 
-# Set non-interactive frontend for apt-get to avoid regional settings prompt
-ENV DEBIAN_FRONTEND=noninteractive
-
-# Install dependencies: curl, maven, openjdk-21, git and others
-RUN apt-get update && apt-get install -y \
-    openjdk-21-jre-headless \
-    && apt-get clean
+# Copy the custom JRE from the build stage
+COPY --from=build /custom-jre /custom-jre
 
 # Set working directory for runtime environment
 WORKDIR /usr/src/app
 
 # Copy the built JAR from the build stage
 COPY --from=build /usr/src/app/target/*.jar /usr/src/app/app.jar
+
+# Use the custom JRE to run the application
+ENV PATH="/custom-jre/bin:$PATH"
 
 # Expose the port the Spring Boot app will run on
 EXPOSE 8080
